second upload for week4 + formatting fixes
